Fixing sidebar scaling on small screen

--- a/css/about.css
+++ b/css/about.css
@@ -112,7 +112,6 @@
   
   .about-sidebar {
     flex: 1;
-    width: 100%;
     margin-bottom: 2rem;
   }
 }
